@@ -1,5 +1,10 @@
 2001-09-11  Richard Henderson  <rth@redhat.com>
 
+	* elf64-alpha.c (elf64_alpha_section_flags): New.
+	(elf64_alpha_fake_sections): Map SEC_SMALL_DATA to SHF_ALPHA_GPREL.
+
+2001-09-11  Richard Henderson  <rth@redhat.com>
+
 	* elf64-alpha.c (elf64_alpha_relocate_section): Do not
 	apply HINT relocations against dynamic symbols.
 
